--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-packager . --out=output --overwrite --icon=app/assets/icons/resize-icon"
+    "build": "electron-packager . 'Image Resizer' --out=output --overwrite --icon=app/assets/icons/resize-icon"
   },
   "keywords": [
     "Web Designer Magazine",
